--- a/hunter-net/html/index.html
+++ b/hunter-net/html/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="bootstrap.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="hunter.css">
     <link rel="icon" 
-      type="image/png" 
-      href="images/favicon.ico">
+      type="png" 
+      href="favicon.ico">
     <title>Hunter Login</title>
     <script>
       function validateForm() {
@@ -33,7 +33,7 @@
     
       <div class="container" id ="login">
         <nav class="navbar">  
-          <span class="navbar-brand mb-0 h1" src = "images/headerbackground.png"> <img src="images/logo.png" alt=""></span>
+          <span class="navbar-brand mb-0 h1" src = "headerbackground.png"> <img src="logo.png" alt=""></span>
         </nav>
         <div class="navbar2">  
           <span class="navbar-brand mb-0 h1" >. </span>
@@ -100,7 +100,7 @@
             212.772.4000
           </div>
           <div class="col-sm" id="cuny-logo">
-            <img src="images/cuny-logo.gif">
+            <img src="cuny-logo.gif">
           </div>
         </div>
        </div>
@@ -108,7 +108,7 @@
 
 
           
-   <script src="bootstrap/js/bootstrap.min.js"></script>
+   <script src="bootstrap.min.js"></script>
 
   </body>
 </html>
